namespace Player.Animation
{
    public class AnimationDescription
    {
        public const string PLAYER_IDLE = "IsIdle";
        public const string PLAYER_RUN = "IsRunning";
        public const string PLAYER_SLIDE = "IsSliding";
        public const string PLAYER_JUMP = "IsJumping";
        public const string PLAYER_DEATH = "IsDeath";
    }
}